--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Shenzhen Institutes of Advanced Technology<br>JCRAI, 2023, Oral</span>
+                    <span class="author-block">Shenzhen Institutes of Advanced Technology (SIAT)<br>Chinese Academy of Sciences (CAS)<br>JCRAI, 2023, Oral</span>
                   </div>
 
                   <div class="column has-text-centered">
