--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                 <span class="author-block">
                   <a href="https://scholar.google.com.au/citations?user=cU_VjScAAAAJ&hl=en" target="_blank">jixin Liang</a>,</span>
                   <span class="author-block">
-                    <a href="https://orcid.org/0000-0002-3116-9410" target="_blank">Yuping Ye</a></span>
+                    <a href="https://orcid.org/0000-0002-3116-9410" target="_blank">Yuping Ye</a>,</span>
                     <span class="author-block">
-                          <a href="" target="_blank">Juan Zhao</a></span>
+                          <a href="" target="_blank">Juan Zhao</a>,</span>
               <span class="author-block">
-                          <a href="https://orcid.org/0000-0003-3585-6522" target="_blank">Zhan Song</a></span>
+                          <a href="https://orcid.org/0000-0003-3585-6522" target="_blank">Zhan Song</a>,</span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
