--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                     <!-- Supplementary PDF link -->
                     <span class="link-block">
-                      <a href="https://github.com/Billxzliu/JCRAI/blob/main/JCRAI%202023_Liu.pdf" target="_blank"
+                      <a href="JCRAI 2023_Liu.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="fas fa-file-pdf"></i>
