--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                   <span class="author-block">
                     <a href="https://orcid.org/0000-0002-3116-9410" target="_blank">Yuping Ye</a>, </span>
                     <span class="author-block">
-                          <a href="" target="_blank">Juan Zhao</a>, </span>
+                          <a href="https://people.ucas.ac.cn/~juanzhao" target="_blank">Juan Zhao</a>, </span>
               <span class="author-block">
                           <a href="https://orcid.org/0000-0003-3585-6522" target="_blank">Zhan Song</a></span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Shenzhen Institutes of Advanced Technology (SIAT)<br>Chinese Academy of Sciences (CAS)<br>JCRAI, 2023, Oral</span>
+                    <span class="author-block">Research Center for Machine Vision<br>Shenzhen Institutes of Advanced Technology (SIAT)<br>Chinese Academy of Sciences (CAS)<br>JCRAI, 2023, Oral</span>
                   </div>
 
                   <div class="column has-text-centered">
