--- a/index.html
+++ b/index.html
@@ -117,11 +117,9 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
-        <source src="video_compress.mp4"
-        type="video/mp4">
-      </video>
+      <video poster="" id="tree" autoplay controls muted loop width="640" height="360">
+  <source src="video_compress.mp4" type="video/mp4">
+</video>
       <h2 class="subtitle has-text-centered">
         Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
       </h2>
