--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+        It first goes through one scan, then grabs a vegetable packet, then a second scan, grabs a sauce packet, then a third scan, grabs a powder packet. The process is cycled through until there are no targets in the field of view.
       </h2>
     </div>
   </div>
