--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="robot.jpg" alt="MY ALT TEXT"/>
+        <img src="object.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           The system we designed and three kinds of packages we detected.
         </h2>
@@ -182,51 +182,13 @@
 <!-- End image carousel -->
 
 
-<!-- Video carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="50%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
-            <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End video carousel -->
-
-
-
-
-
-
 <!-- Paper poster -->
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title">Poster</h2>
+      <h2 class="title">Oral Presentation</h2>
 
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
+      <iframe  src="JCRAI 2023_Liu.pdf" width="100%" height="550">
           </iframe>
         
       </div>
@@ -239,7 +201,23 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@inproceedings{10.1145/3632971.3632986,
+author = {Liu, Xuanzhi and Liang, Jixin and Ye, Yuping and Song, Zhan and Zhao, Juan},
+title = {A Food Package Recognition and Sorting System Based on Structured Light and Deep Learning},
+year = {2024},
+isbn = {9798400707704},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3632971.3632986},
+doi = {10.1145/3632971.3632986},
+abstract = {Vision algorithm-based robotic arm grasping system is one of the robotic arm systems that can be applied to a wide range of scenarios. It uses algorithms to automatically identify the location of the target and guide the robotic arm to grasp it, which has more flexible features than the teachable robotic arm grasping system. However, for some food packages, their transparent packages or reflective materials bring challenges to the recognition of vision algorithms, and traditional vision algorithms cannot achieve high accuracy for these packages. In addition, in the process of robotic arm grasping, the positioning on the z-axis height still requires manual setting of parameters, which may cause errors. Based on the above two problems, we designed a sorting system for food packaging using deep learning algorithms and structured light 3D reconstruction technology. Using a pre-trained MASK R-CNN model to recognize the class of the object in the image and get its 2D coordinates, then using structured light 3D reconstruction technique to calculate its 3D coordinates, and finally after the coordinate system conversion to guide the robotic arm for grasping. After testing, it is shown that the method can fully automate the recognition and grasping of different kinds of food packages with high accuracy. Using this method, it can help food manufacturers to reduce production costs and improve production efficiency.},
+booktitle = {Proceedings of the 2023 International Joint Conference on Robotics and Artificial Intelligence},
+pages = {19–25},
+numpages = {7},
+keywords = {deep learning, food package sorting, object detection, robot arm grasping, structured light},
+location = {Shanghai, China},
+series = {JCRAI '23}
+}</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
